--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "16.3.0-alpha.1",
-    "react-native": "0.54.1"
+    "react-native": "0.54.1",
+    "react-navigation": "^1.5.8"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
